# merc

./: .gitignore  .gitmodules  CHANGELOG  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.md  TECHNICAL_DEBT.md
.github/: copilot-instructions.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: benchmarks.yml  cargo_clippy.yml  cargo_deny.yml  doc.yml  msrv.yml  release.yml  test-miri.yml  test.yml  test_address_sanitizer.yml
crates/aterm/: Cargo.toml  README.md
crates/aterm/src/: aterm.rs  aterm_binary_stream.rs  aterm_builder.rs  aterm_int.rs  aterm_list.rs  aterm_storage.rs  aterm_string.rs  global_aterm_pool.rs  lib.rs  markable.rs  protected.rs  random_term.rs  (+4 more)
crates/data/: Cargo.toml  README.md
crates/io/: Cargo.toml  README.md
crates/ldd/: Cargo.toml
crates/lts/: Cargo.toml  README.md
crates/number/: README.md
crates/preorder/: Cargo.toml
crates/reduction/: Cargo.toml
crates/reduction/src/: block_partition.rs  compare.rs  lib.rs  quotient.rs  reduce.rs  scc_decomposition.rs  signature_refinement.rs  signatures.rs  simple_block_partition.rs  sort_topological.rs  weak_bisimulation.rs
crates/sabre/: Cargo.toml  README.md
crates/sharedmutex/: Cargo.toml  README.md
crates/symbolic/: Cargo.toml
crates/symbolic/src/: cube_iter.rs  format.rs  io.rs  io_symbolic_lts.rs  ldd_to_bdd.rs  lib.rs  symbolic_lts.rs
crates/syntax/: Cargo.toml  mcrl2_grammar.pest
crates/unsafety/: Cargo.toml  README.md
crates/utilities/: Cargo.toml  README.md
crates/vpg/: Cargo.toml  README.md
examples/ldd/: README.md
examples/lts/: README.md  vasy_18_73.bcg
examples/vpg/: minepump_fts.aut
tools/gui/: Cargo.toml  README.md
tools/ltsinfo/: Cargo.toml
tools/mcrl2/: Cargo.toml  README.md  deny.toml
tools/release/ltsinfo/: Cargo.toml
tools/release/ltsinfo/src/: main.rs
tools/sym/: Cargo.toml
tools/vpg/: Cargo.toml
(+166 files in other folders)
