[package]
name = "mcrl3_reduction"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
mcrl3_io.workspace = true
mcrl3_lts.workspace = true
mcrl3_utilities.workspace = true

bumpalo.workspace = true
clap.workspace = true
log.workspace = true
rand.workspace = true
rustc-hash.workspace = true

[dev-dependencies]
test-log.workspace = true