[package]
name = "mcrl3_symbolic"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
mcrl3_aterm.workspace = true
mcrl3_data.workspace = true
mcrl3_io.workspace = true
mcrl3_ldd.workspace = true
mcrl3_utilities.workspace = true

oxidd.workspace = true